face register route done

--- a/faceauth/.vscode/settings.json
+++ b/faceauth/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "e:\\Tensorflow\\tfvenv\\Scripts\\python.exe"
+    "python.pythonPath": "e:\\Tensorflow\\tfvenv\\Scripts\\python.exe",
+
 }
